Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -890,8 +890,8 @@
         <div class="surface">
           <h3 style="margin-bottom:10px;">Direct Contact</h3>
           <p style="margin-bottom:10px;">
-            <strong>Email:</strong> <a href="mailto:hello@luxynest.com">hello@luxynest.com</a><br/>
-            <strong>Phone:</strong> <a href="tel:+12015550123">(201) 555-0123</a><br/>
+            <strong>Email:</strong> <a href="mailto:Luxynestcleaning@gmail.com">hello@luxynest.com</a><br/>
+            <strong>Phone:</strong> <a href="tel:+12015550123">(908) 899-3588</a><br/>
             <strong>Service Area:</strong> New Jersey
           </p>
           <a class="btn btn--primary" href="#estimation">Request a Private Quote</a>
@@ -901,7 +901,7 @@
           <h3 style="margin-bottom:10px;">Hours</h3>
           <p style="margin-bottom:10px;">
             Mon–Fri: 8:00 AM – 6:00 PM<br/>
-            Sat: 9:00 AM – 3:00 PM<br/>
+            Sat: By request
             Sun: By request
           </p>
           <p class="note">Tip: luxury feel improves when hours, process, and expectations are clear.</p>
@@ -1047,3 +1047,4 @@
 
 </body>
 </html>
+
