Update greeting from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -901,8 +901,8 @@
           <h3 style="margin-bottom:10px;">Hours</h3>
           <p style="margin-bottom:10px;">
             Mon–Fri: 8:00 AM – 6:00 PM<br/>
-            Sat: By request
-            Sun: By request
+            Sat | Sun: By request
+               
           </p>
           <p class="note">Tip: luxury feel improves when hours, process, and expectations are clear.</p>
         </div>
@@ -1047,4 +1047,5 @@
 
 </body>
 </html>
+
 
