--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;600&family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="styles.css?v=7">  <style>
-    :root{
+<link rel="stylesheet" href="styles.css?v=99">    :root{
       --bg: #F7F5F2;           /* warm ivory */
       --surface: #FFFFFF;
       --ink: #111111;          /* charcoal */
