--- a/index.html
+++ b/index.html
@@ -140,31 +140,48 @@
       <!-- =========================
            ✅ HIGHLIGHT: SERVICE PAGES GRID
            ========================= -->
-      <div class="spacer"></div>
+     <!-- ✅ PRICE HINTS (fills the empty space) -->
+<div class="price-hints">
+  <div class="price-cardHint">
+    <div class="price-top">
+      <div class="price-name">Standard Cleaning</div>
+      <div class="price-badge">Most Popular</div>
+    </div>
+    <div class="price-line">
+      <span class="price-label">Typical range</span>
+      <span class="price-value">$160 – $320</span>
+    </div>
+    <div class="price-sub">Best for weekly / bi-weekly upkeep.</div>
+  </div>
 
-      <div class="kicker">
-        <span class="kicker__text">Service Pages</span>
-        <span class="kicker__line" aria-hidden="true"></span>
-      </div>
+  <div class="price-cardHint">
+    <div class="price-top">
+      <div class="price-name">Deep Cleaning</div>
+      <div class="price-badge">Detail Reset</div>
+    </div>
+    <div class="price-line">
+      <span class="price-label">Typical range</span>
+      <span class="price-value">$275 – $500</span>
+    </div>
+    <div class="price-sub">Best for buildup, seasonal, first visit.</div>
+  </div>
 
-      <h2>Explore Each Service</h2>
-      <p>Clear scopes, transparent estimating, and premium execution—choose the service you need.</p>
+  <div class="price-cardHint">
+    <div class="price-top">
+      <div class="price-name">Move-In / Move-Out</div>
+      <div class="price-badge">White-Glove</div>
+    </div>
+    <div class="price-line">
+      <span class="price-label">Typical range</span>
+      <span class="price-value">$350 – $700</span>
+    </div>
+    <div class="price-sub">Best for handover-ready results.</div>
+  </div>
+</div>
 
-      <div class="grid grid--3">
-        <a class="card card--link" href="standard.html">
-          <h3>Standard Cleaning</h3>
-          <p>Routine maintenance for consistently pristine spaces.</p>
-        </a>
-        <a class="card card--link" href="deep-cleaning.html">
-          <h3>Deep Cleaning</h3>
-          <p>A comprehensive reset for detail zones and buildup.</p>
-        </a>
-        <a class="card card--link" href="move-in-move-out.html">
-          <h3>Move-In / Move-Out</h3>
-          <p>White-glove transitions for handover-ready results.</p>
-        </a>
-      </div>
-
+<p class="price-disclaimer">
+  Pricing varies by square footage, bedrooms/baths, condition, pets, and add-ons.
+</p>
     </div>
   </section>
 
