--- a/index.html
+++ b/index.html
@@ -140,9 +140,10 @@
       <!-- =========================
            ✅ HIGHLIGHT: SERVICE PAGES GRID
            ========================= -->
-     <!-- ✅ PRICE HINTS (fills the empty space) -->
+<!-- ✅ PRICE HINTS (clickable service previews) -->
 <div class="price-hints">
-  <div class="price-cardHint">
+
+  <a class="price-cardHint price-link" href="standard.html">
     <div class="price-top">
       <div class="price-name">Standard Cleaning</div>
       <div class="price-badge">Most Popular</div>
@@ -152,9 +153,9 @@
       <span class="price-value">$160 – $320</span>
     </div>
     <div class="price-sub">Best for weekly / bi-weekly upkeep.</div>
-  </div>
+  </a>
 
-  <div class="price-cardHint">
+  <a class="price-cardHint price-link" href="deep-cleaning.html">
     <div class="price-top">
       <div class="price-name">Deep Cleaning</div>
       <div class="price-badge">Detail Reset</div>
@@ -164,9 +165,9 @@
       <span class="price-value">$275 – $500</span>
     </div>
     <div class="price-sub">Best for buildup, seasonal, first visit.</div>
-  </div>
+  </a>
 
-  <div class="price-cardHint">
+  <a class="price-cardHint price-link" href="move-in-move-out.html">
     <div class="price-top">
       <div class="price-name">Move-In / Move-Out</div>
       <div class="price-badge">White-Glove</div>
@@ -176,14 +177,13 @@
       <span class="price-value">$350 – $700</span>
     </div>
     <div class="price-sub">Best for handover-ready results.</div>
-  </div>
+  </a>
+
 </div>
 
 <p class="price-disclaimer">
   Pricing varies by square footage, bedrooms/baths, condition, pets, and add-ons.
 </p>
-    </div>
-  </section>
 
   <!-- =========================
        ✅ HIGHLIGHT: PROCESS
